WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304019
REGRESSION (Safari 26.2): shape-outside initially incorrect when used with imported font
https://bugs.webkit.org/show_bug.cgi?id=304019
Summary
REGRESSION (Safari 26.2): shape-outside initially incorrect when used with im...
Brad West
Reported
2025-12-11 13:32:47 PST
Created
attachment 477698
[details]
File for reproducing To reproduce: 1. Download the attached html file 2. Double-click to open it in Safari (26.2) or STP (233) 3. Observe that the text is too close to the drop cap (see drop-cap-text-too-close) 4. Reload 5. Observe that the text is shifts and is correctly positioned (see drop-cap-text-correct) This only occurs with the combination of an imported font (Cinzel Decorative) and the use of shape-outside. If I comment one of these out, the behavior is consistent. While a reload is one way to get the correct layout, I can also fix the layout by highlighting the O, opening the inspector, setting display to none and then clearing display. So it seems like something is getting an incorrect initial layout, but is eventually resolved. Observed this in beta of 26.2 and in STP 233. In 26.1 (and earlier), the layout is correct as soon as the file is opened.
Attachments
File for reproducing
(1.04 KB, text/html)
2025-12-11 13:32 PST
,
Brad West
no flags
Details
Screenshot of incorrect layout
(31.84 KB, image/png)
2025-12-11 13:33 PST
,
Brad West
no flags
Details
Screenshot of correct layout (after reload)
(32.64 KB, image/png)
2025-12-11 13:33 PST
,
Brad West
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Brad West
Comment 1
2025-12-11 13:33:10 PST
Created
attachment 477699
[details]
Screenshot of incorrect layout
Brad West
Comment 2
2025-12-11 13:33:32 PST
Created
attachment 477700
[details]
Screenshot of correct layout (after reload)
Brad West
Comment 3
2025-12-11 13:37:09 PST
Didn't know whether this would be the case when reporting, but the problem is also demonstrated when clicking to view the attached html the *first time*. With subsequent views, the attachment will look correct. To repro after viewing the attachment the first time, you need to quit and restart Safari.
Radar WebKit Bug Importer
Comment 4
2025-12-11 16:04:30 PST
<
rdar://problem/166336491
>
Nipun Shukla
Comment 5
2025-12-16 10:53:09 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55488
EWS
Comment 6
2026-01-08 10:40:25 PST
Committed
305299@main
(acbb891ea04c): <
https://commits.webkit.org/305299@main
> Reviewed commits have been landed. Closing PR #55488 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug