REGRESSION (Safari 26.2): shape-outside initially incorrect when used with imported font https://bugs.webkit.org/show_bug.cgi?id=304019 rdar://166336491

Reviewed by Simon Fraser and Alan Baradlay.

When web fonts load after initial layout, CSS shape properties remain unchanged
but box dimensions can change due to different font metrics. The regression caused
an early return when CSS is identical, preventing shape invalidation.

This issue was fixed by extending the early return condition to check whether
Style::Difference requires a repaint or layout. This ensures shapes are
invalidated when dimension-affecting properties change.

* LayoutTests/fast/shapes/shape-outside-floats/shape-outside-invalidation-after-font-load-expected.txt: Added.
* LayoutTests/fast/shapes/shape-outside-floats/shape-outside-invalidation-after-font-load.html: Added.
* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::styleDidChange):
(WebCore::RenderBox::updateShapeOutsideInfoAfterStyleChange):
* Source/WebCore/rendering/RenderBox.h:

Canonical link: https://commits.webkit.org/305299@main